# python-graphblas

./: .codecov.yml  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .travis_old.yml  .yamllint.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  build.py  conftest.py  dev-requirements.txt  environment.yml  pyproject.toml  setup.cfg  setup.py  versioneer.py
.github/: zizmor.yml
.github/workflows/: debug.yml  imports.yml  lint.yml  publish_pypi.yml  test_and_build.yml
binder/: environment.yml
docs/: conf.py  env.yml  index.rst
docs/_static/: custom.css  matrix.css
docs/api_reference/: collections.rst  exceptions.rst  index.rst  io.rst  operators.rst
docs/contributor_guide/: index.rst
docs/getting_started/: faq.rst  index.rst  primer.rst  theory.rst
docs/user_guide/: collections.rst  fundamentals.rst  index.rst  init.rst  io.rst  operations.rst  operators.rst  recorder.rst  types.rst  udf.rst  udt.rst
graphblas/: __init__.py  _agg.py  _automethods.py  _infixmethods.py  _slice.py  _version.py  agg.py  base.py  descriptor.py  dtypes.py  exceptions.py  expr.py  formatting.py  graphblas.yaml  infix.py  io.py  mask.py  matrix.py  operator.py  recorder.py  scalar.py  utils.py  vector.py  viz.py
graphblas/_ss/: config.py  descriptor.py  matrix.py  prefix_scan.py  utils.py  vector.py
graphblas/agg/: __init__.py  ss.py
graphblas/binary/: __init__.py  numpy.py  ss.py
graphblas/core/: __init__.py  agg.py  automethods.py  base.py  descriptor.py  dtypes.py  expr.py  formatting.py  infix.py  infixmethods.py  mask.py  matrix.py  operator.py  recorder.py  scalar.py  slice.py  utils.py  vector.py
graphblas/core/operator/: __init__.py  agg.py  base.py  binary.py  indexbinary.py  indexunary.py  monoid.py  select.py  semiring.py  udt_utils.py  unary.py  utils.py
graphblas/core/ss/: __init__.py  _utils.py  binary.py  config.py  context.py  descriptor.py  dtypes.py  indexbinary.py  indexunary.py  jit_config.py  matrix.py  prefix_scan.py  select.py  unary.py  utils.py  vector.py
graphblas/dtypes/: __init__.py  _core.py  ss.py
graphblas/indexbinary/: __init__.py  ss.py
graphblas/indexunary/: __init__.py  ss.py
graphblas/io/: __init__.py  _awkward.py  _matrixmarket.py  _networkx.py  _numpy.py  _scipy.py  _sparse.py  _viz.py
graphblas/monoid/: __init__.py  numpy.py  ss.py
graphblas/op/: __init__.py  numpy.py
graphblas/select/: __init__.py  ss.py
graphblas/semiring/: __init__.py  numpy.py
graphblas/ss/: __init__.py  _core.py
graphblas/tests/: conftest.py  pickle1-vanilla.pkl  pickle1.pkl  pickle2-vanilla.pkl  pickle2.pkl  pickle3-vanilla.pkl  pickle3.pkl  test_auto_init.py  test_core.py  test_descriptor.py  test_dtype.py  test_external_init.py  test_formatting.py  test_indexbinary.py  test_infix.py  test_io.py  test_mask.py  test_matrix.py  test_numpyops.py  test_op.py  test_operator_types.py  test_pickle.py  test_prefix_scan.py  test_pygraphblas.py  test_recorder.py  test_resolving.py  test_scalar.py  test_ss_utils.py  test_ssjit.py  test_vector.py
graphblas/unary/: __init__.py  numpy.py  ss.py
grblas/: __init__.py  _agg.py  _automethods.py  _infixmethods.py  _slice.py  _ss.pxd  _ss.pyx  _ss_utils.py  _version.py  agg.py  base.py  binary.py  descriptor.py  dtypes.py  exceptions.py  expr.py  formatting.py  grblas.yaml  infix.py  io.py  mask.py  matrix.py  operator.py  ops.py  recorder.py  scalar.py  semiring.py  ss.py  utils.py  vector.py
grblas/_ss/: matrix.py  prefix_scan.py  scalar.py  utils.pyx  vector.py
grblas/backends/python/: Scratch pad for python backend.ipynb  __init__.py  base.py  constants.py  context.py  descriptors.py  exceptions.py  matrix.py  operators.py  types.py  vector.py
grblas/backends/suitesparse/: __init__.py  _suitesparse_grblas.abi3.so.backup  build.py  clean_header.py  patch401.diff  suitesparse_graphblas_3.1.1.h  suitesparse_graphblas_3.2.2.h  suitesparse_graphblas_3.3.1.h  suitesparse_graphblas_3.3.3.h  suitesparse_graphblas_4.0.1.h  suitesparse_graphblas_4.0.3.h  suitesparse_graphblas_no_complex_4.0.3.h
grblas/binary/: __init__.py  numpy.py
grblas/monoid/: __init__.py  numpy.py
grblas/numpyops/: __init__.py  binary.py  monoid.py  semiring.py  unary.py
grblas/op/: __init__.py  numpy.py
grblas/select/: __init__.py
grblas/semiring/: __init__.py  numpy.py
grblas/ss/: __init__.py  _core.py  _vector.py
grblas/tests/: auto_init.py  conftest.py  pickle1.pkl  pickle2.pkl  pickle3.pkl  test_auto_init.py  test_core.py  test_descriptor.py  test_dtype.py  test_external_init.py  test_formatting.py  test_infix.py  test_io.py  test_matrix.py  test_numpyops.py  test_op.py  test_operator_types.py  test_pickle.py  test_prefix_scan.py  test_pygraphblas.py  test_recorder.py  test_resolving.py  test_scalar.py  test_ss_utils.py  test_vector.py
grblas/unary/: __init__.py  numpy.py
notebooks/: Aggregators.ipynb  Connected Components -- FastSV.ipynb  Example B.1 -- Level BFS.ipynb  Example B.3 -- Parent BFS.ipynb  GraphBLAS Function signatures.ipynb  HPEC2022.ipynb  Intro to GraphBLAS + SSSP example.ipynb  Louvain.ipynb  Operators.ipynb  Pagerank Demo.ipynb  logos_and_colors.ipynb  repr_demo.ipynb
recipe/: build.sh  meta.yaml
scripts/: autogenerate.py  bizarro_scalars.sh  check_versions.sh  ci_pick_versions.py  create_pickle.py  find_aiisms.sh  jit_diagnostics.py  test_imports.sh
test/: auto_init.py  conftest.py  test_descriptor.py  test_dtype.py  test_formatting.py  test_matrix.py  test_numpyops.py  test_op.py  test_resolving.py  test_scalar.py  test_vector.py
